[tool.poetry]
name = "feedback_bot"
version = "0.1.0"
description = ""
authors = ["Deer-Spangle <deer@spangle.org.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.22.0"
prometheus-client = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
